--- a/temporal/package.json
+++ b/temporal/package.json
@@ -9,6 +9,7 @@
     "client": "ts-node src/client/order-client.ts",
     "dev:worker": "nodemon --exec ts-node src/worker/order-worker.ts",
     "dev:client": "nodemon --exec ts-node src/client/order-client.ts",
+    "live-demo": "node live-server.js",
     "start": "npm run worker"
   },
   "keywords": [
@@ -20,16 +21,17 @@
   "author": "SA Team",
   "license": "MIT",
   "dependencies": {
+    "@temporalio/activity": "^1.9.3",
     "@temporalio/client": "^1.9.3",
     "@temporalio/worker": "^1.9.3",
     "@temporalio/workflow": "^1.9.3",
-    "@temporalio/activity": "^1.9.3",
-    "nanoid": "^5.0.6"
+    "nanoid": "^5.0.6",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
-    "typescript": "^5.3.0",
+    "nodemon": "^3.0.2",
     "ts-node": "^10.9.0",
-    "nodemon": "^3.0.2"
+    "typescript": "^5.3.0"
   }
 }
